@@ -461,7 +461,7 @@ PyErr_SetFromErrnoWithFilename(PyObject *exc, const char *filename)
 	return result;
 }
 
-#ifdef Py_WIN_WIDE_FILENAMES
+#ifdef MS_WINDOWS
 PyObject *
 PyErr_SetFromErrnoWithUnicodeFilename(PyObject *exc, const Py_UNICODE *filename)
 {
@@ -472,7 +472,7 @@ PyErr_SetFromErrnoWithUnicodeFilename(PyObject *exc, const Py_UNICODE *filename)
 	Py_XDECREF(name);
 	return result;
 }
-#endif /* Py_WIN_WIDE_FILENAMES */
+#endif /* MS_WINDOWS */
 
 PyObject *
 PyErr_SetFromErrno(PyObject *exc)
@@ -549,7 +549,6 @@ PyObject *PyErr_SetExcFromWindowsErrWithFilename(
 	return ret;
 }
 
-#ifdef Py_WIN_WIDE_FILENAMES
 PyObject *PyErr_SetExcFromWindowsErrWithUnicodeFilename(
 	PyObject *exc,
 	int ierr,
@@ -564,7 +563,6 @@ PyObject *PyErr_SetExcFromWindowsErrWithUnicodeFilename(
 	Py_XDECREF(name);
 	return ret;
 }
-#endif /* Py_WIN_WIDE_FILENAMES */
 
 PyObject *PyErr_SetExcFromWindowsErr(PyObject *exc, int ierr)
 {
@@ -588,7 +586,6 @@ PyObject *PyErr_SetFromWindowsErrWithFilename(
 	return result;
 }
 
-#ifdef Py_WIN_WIDE_FILENAMES
 PyObject *PyErr_SetFromWindowsErrWithUnicodeFilename(
 	int ierr,
 	const Py_UNICODE *filename)
@@ -602,7 +599,6 @@ PyObject *PyErr_SetFromWindowsErrWithUnicodeFilename(
 	Py_XDECREF(name);
 	return result;
 }
-#endif /* Py_WIN_WIDE_FILENAMES */
 #endif /* MS_WINDOWS */
 
 void
