@@ -12,6 +12,8 @@ What's New in Python 3.1 release candidate 1?
 Core and Builtins
 -----------------
 
+- Issue #3527: Removed Py_WIN_WIDE_FILENAMES which is not used any more.
+
 - Issue #5994: the marshal module now has docstrings.
 
 - Issue #5981: Fix three minor inf/nan issues in float.fromhex:
